--- a/src/styling/ExamplePage.css
+++ b/src/styling/ExamplePage.css
@@ -9,3 +9,12 @@
 .blue-header {
   color: rgb(20, 177, 221);
 }
+.container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.larger-image {
+  width: 800px; /* Adjust the width as needed */
+  height: auto; /* This will maintain the aspect ratio */
+}
