--- a/src/styling/ExamplePage.css
+++ b/src/styling/ExamplePage.css
@@ -15,6 +15,6 @@
   align-items: center;
 }
 .larger-image {
-  width: 800px; /* Adjust the width as needed */
-  height: auto; /* This will maintain the aspect ratio */
+  width: 800px; 
+  height: auto; 
 }
